classDiagram
    direction TB

    class Categorie {
        nom : texte
        description : texte
    }
    class Materiel {
        nom : texte
        marque : texte
        modele : texte
        reference : texte
    }
    class Exemplaire {
        numeroInventaire : texte
        etat : énuméré
    }
    class Pret {
        dateDebut : date
        dateFin : date
        statut : énuméré
        dateDemande : date
        dateValidation : date
        dateRetour : date
        motifRefus : texte
        estEnRetard(instant) booléen
    }
    class Utilisateur {
        email : texte
        nom : texte
        prenom : texte
        role : énuméré
        estActif : booléen
        emailRappel : booléen
    }
    class JournalAdmin {
        dateAction : date
        typeAction : énuméré
        acteurLibelle : texte
        cibleLibelle : texte
        details : texte
    }

    class Role {
        <<enumeration>>
        EMPRUNTEUR
        GESTIONNAIRE
        SUPER_ADMIN
    }
    class EtatExemplaire {
        <<enumeration>>
        DISPONIBLE
        PRETE
        EN_MAINTENANCE
        HORS_SERVICE
        PERDU
        estPretable() booléen
    }
    class StatutPret {
        <<enumeration>>
        DEMANDE
        VALIDE
        REFUSE
        RETOURNE
        ANNULE
        estTerminal() booléen
    }
    class TypeActionJournal {
        <<enumeration>>
        PRET_VALIDATION
        PRET_REFUS
        PRET_RETOUR
        COMPTE_CREATION
        COMPTE_MODIFICATION
        COMPTE_CHANGEMENT_ROLE
        COMPTE_ACTIVATION
        COMPTE_DESACTIVATION
    }

    Categorie "1" --> "*" Materiel : classe
    Materiel "1" *-- "*" Exemplaire : décline en
    Exemplaire "1" --> "*" Pret : est prêté via
    Utilisateur "1" --> "*" Pret : emprunte
    Utilisateur "0..1" --> "*" Pret : valide

    Utilisateur ..> Role : porte
    Exemplaire ..> EtatExemplaire : a pour état
    Pret ..> StatutPret : a pour statut
    JournalAdmin ..> TypeActionJournal : a pour type

    note for JournalAdmin "Classe isolée, sans association (choix délibéré) : acteur et cible figés en libellés (append-only). La trace survit à la suppression des comptes — traçabilité RGPD."
